zokrates_cli/examples/compile_errors/generics/generics_in_main.zok
def main<P>(field[P] a) {
    return;
}
